--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,25 @@
-title = "My New Hugo Site"
-languageCode = "en-us"
-baseurl = "http://replace-this-with-your-hugo-site.com/"
+baseurl = "mrtobe.github.io"
+languageCode = "en"
+title = "Tobias Schmidt's Tech Blog"
+theme = "hemingway"
+copyright = "&copy; <a href=\"https://github.com/mrtobe\">Tobias Schmidt</a> 2016"
+disqusShortname = ""
+googleAnalytics = ""
+
+[params]
+
+[params.highlight]
+style = "github"
+languages = ["go", "dockerfile"]
+
+[[params.social]]
+url = "https://github.com/mrtobe"
+fa_icon = "fa-github"
+
+[[params.social]]
+url = "https://www.linkedin.com/in/tobias-schmidt-565b6396"
+fa_icon = "fa-linkedin"
+
+[[params.social]]
+url = "/index.xml"
+fa_icon = "fa-rss"
